section05: Z-index issue

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -887,14 +887,14 @@ z-index: 30;
 }
 
 .slider-05 {
-  z-index: 40;
+  z-index: 30;
   width: 100%;
   height:100%;
 }
 
 .shade {
     background: rgba(0,0,0,.6);
-    z-index: 30;
+    z-index: 35;
     width: 100%;
     height: 100%;
     position: relative;
